Spring boot version upgraded to 3.1, Spring security impacted code updated . Test container support added for mongo db